tests/ui/feature-gates/feature-gate-macro-derive.stderr
error[E0658]: `macro_rules!` derives are unstable
  --> $DIR/feature-gate-macro-derive.rs:3:1
   |
LL | macro_rules! MyDerive { derive() {} => {} }
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #143549 <https://github.com/rust-lang/rust/issues/143549> for more information
   = help: add `#![feature(macro_derive)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0658`.
